--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="container">
             
             <!-- Image Logo -->
-           <!--  <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a>   -->
+         <a class="navbar-brand logo-image" href="index.html"><img src="images/icons/SHBannertranswhite.png" alt="alternative"></a>  
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text page-scroll" href="index.html">Stuart Heath</a>
+              <!--  <a class="navbar-brand logo-text page-scroll" href="index.html">Stuart Heath</a> -->
 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
@@ -137,31 +137,31 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="project.html">
-                                <img class="img-fluid" src="images/work-1.jpg" alt="alternative">
+                            <a href="HibernatingHedgehogs.html">
+                                <img class="img-fluid" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Zigoland, <strong>Project:</strong> started a new website from ground up for a new product <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> Grads in Games - Rising Star 2021 , <strong>Project:</strong> &nbsp;Converted a 2d Minesweeper base project into a 3D variant</p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-4">
+                    <div class="text-container">
+                        <div class="image-container">
+                            <a href="flipoff.html">
+                                <img class="img-fluid" src="images/Projects/Flipoff/Flipoff2.jpg" alt="alternative">
+                            </a>
+                        </div> <!-- end of image-container -->
+                        <p><strong>For:</strong> Global Game Jam 2021, <strong>Project:</strong> &nbsp;tbc</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
-                                <img class="img-fluid" src="images/work-2.jpg" alt="alternative">
+                                <img class="img-fluid" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Visodream, <strong>Project:</strong> developed a new forum for the Visodream community <a class="blue" href="project.html">details</a></p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-4">
-                    <div class="text-container">
-                        <div class="image-container">
-                            <a href="project.html">
-                                <img class="img-fluid" src="images/work-3.jpg" alt="alternative">
-                            </a>
-                        </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Primoday, <strong>Project:</strong> complete redesign of their corporate website and platform <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> tbc, <strong>Project:</strong> &nbsp;tbc</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -170,30 +170,30 @@
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
-                                <img class="img-fluid" src="images/work-4.jpg" alt="alternative">
+                                <img class="img-fluid" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Nextlite, <strong>Project:</strong> created a custom video editing and upload web app <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> &nbsp;tbc, <strong>Project:</strong> &nbsp;tbc</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
-                                <img class="img-fluid" src="images/work-5.jpg" alt="alternative">
+                                <img class="img-fluid" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Syncnow, <strong>Project:</strong> web design for their corporate websites and landing pages <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> tbc, <strong>Project:</strong> &nbsp;tbc</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
-                                <img class="img-fluid" src="images/work-6.jpg" alt="alternative">
+                                <img class="img-fluid" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Shifter, <strong>Project:</strong> started a new website from ground up for a new product <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> tbc, <strong>Project:&nbsp;</strong> tbc</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -242,7 +242,8 @@
                                 <img class="img-fluid" src="images/work-1.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Zigoland, <strong>Project:</strong> started a new website from ground up for a new product <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -252,7 +253,8 @@
                                 <img class="img-fluid" src="images/work-2.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Visodream, <strong>Project:</strong> developed a new forum for the Visodream community <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -262,7 +264,8 @@
                                 <img class="img-fluid" src="images/work-3.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Primoday, <strong>Project:</strong> complete redesign of their corporate website and platform <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -274,7 +277,8 @@
                                 <img class="img-fluid" src="images/work-4.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Nextlite, <strong>Project:</strong> created a custom video editing and upload web app <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -284,7 +288,8 @@
                                 <img class="img-fluid" src="images/work-5.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Syncnow, <strong>Project:</strong> web design for their corporate websites and landing pages <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -294,7 +299,8 @@
                                 <img class="img-fluid" src="images/work-6.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Shifter, <strong>Project:</strong> started a new website from ground up for a new product <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -340,34 +346,36 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="project.html">
-                                <img class="img-fluid" src="images/work-1.jpg" alt="alternative">
+                            <a href="FormulaStudentGPSParser.html">
+                                <img class="img-fluid" src="images/Icons/GitHub_Logo.png" alt="alternative" >
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Zigoland, <strong>Project:</strong> started a new website from ground up for a new product <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> Formula Student, <strong>Project:</strong> &nbsp;Automotive GPS module log parser</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
-                                <img class="img-fluid" src="images/work-2.jpg" alt="alternative">
+                                <img class="img-fluid" src="images/Icons/GitHub_Logo.png" alt="alternative" >
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Visodream, <strong>Project:</strong> developed a new forum for the Visodream community <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> tbc, <strong>Project:</strong> &nbsp;tbc</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
-                                <img class="img-fluid" src="images/work-3.jpg" alt="alternative">
+                                <img class="img-fluid" src="images/Icons/GitHub_Logo.png" alt="alternative" >
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Primoday, <strong>Project:</strong> complete redesign of their corporate website and platform <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For</strong>: tbc, <strong>Project</strong>: tbc<br>
+                        </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
+			<!--
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-container">
@@ -375,31 +383,31 @@
                             <a href="project.html">
                                 <img class="img-fluid" src="images/work-4.jpg" alt="alternative">
                             </a>
-                        </div> <!-- end of image-container -->
+                        </div>
                         <p><strong>For:</strong> Nextlite, <strong>Project:</strong> created a custom video editing and upload web app <a class="blue" href="project.html">details</a></p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                    </div> 
+                </div> 
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
                                 <img class="img-fluid" src="images/work-5.jpg" alt="alternative">
                             </a>
-                        </div> <!-- end of image-container -->
+                        </div> 
                         <p><strong>For:</strong> Syncnow, <strong>Project:</strong> web design for their corporate websites and landing pages <a class="blue" href="project.html">details</a></p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
+                    </div> 
+                </div> 
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="project.html">
                                 <img class="img-fluid" src="images/work-6.jpg" alt="alternative">
                             </a>
-                        </div> <!-- end of image-container -->
+                        </div> 
                         <p><strong>For:</strong> Shifter, <strong>Project:</strong> started a new website from ground up for a new product <a class="blue" href="project.html">details</a></p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                    </div> 
+                </div> 
+            </div> -->
         </div> <!-- end of container -->
     </div> <!-- end of basic-4 -->
     <!-- end of works -->
