--- a/projects.html
+++ b/projects.html
@@ -71,20 +71,15 @@
 
 
     <!-- Header -->
-    <header id="header" class="header">
+    <header class="ex-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <div class="text-container">
-                      <h1 class="h1-large">Stuart Heath</h1>
-                        <h1 class="h1-large">Aspiring Games Programmer&nbsp;&nbsp;</h1>
-<a class="btn-solid-lg page-scroll" href="projects.html">Projects</a>
-                        <a class="btn-outline-lg page-scroll" href="about.html"></i>About me</a>
-                    </div> <!-- end of text-container -->
+                <div class="col-xl-10 offset-xl-1">
+                    <h1>My Games And Projects</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
-    </header> <!-- end of header -->
+    </header> <!-- end of ex-header -->
     <!-- end of header -->
 
 <!-- Section Divider -->
