--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                         <a class="nav-link page-scroll" href="about.html">About Me</a>
                     </li>
                   <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#contact">CV</a>
+                        <a class="nav-link page-scroll" href="CV.html">CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#contact">Contact</a>
+                        <a class="nav-link page-scroll" href="contact.html">Contact</a>
                     </li>
 					
                 </ul>
