updates to page titles

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h1>CV</h1>
+                    <h1>About Me</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -84,7 +84,7 @@
     <!-- end of header -->
 
 
-      <!-- Basic -->
+    <!-- Basic -->
     <div class="ex-basic-1 pt-4">
         <div class="container">
             <div class="row">
@@ -121,8 +121,7 @@
     <!-- end of section divider -->
 
 	
-
-				
+		
 
     <!-- Footer -->
     <div class="footer bg-gray">
