--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,21 @@
 
 
 
+
+    <!-- Header -->
+    <header class="ex-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-10 offset-xl-1">
+                    <h1>Contact</h1>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </header> <!-- end of ex-header -->
+    <!-- end of header -->
+
+
+
     <!-- Basic -->
     <div class="ex-basic-1 pt-4">
         <div class="container">
