--- a/contact.html
+++ b/contact.html
@@ -131,13 +131,13 @@
                 <div class="col-lg-12">
                     <div class="social-container">
                         <span class="fa-stack">
-							<a href="https://stuartheath.itch.io/"><img src="images/icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
+							<a href="https://stuartheath.itch.io/"><img src="images/Icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/Icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://twitter.com/Pkplonker"><img src="images/icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://twitter.com/Pkplonker"><img src="images/Icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         
                     </div> <!-- end of social-container -->
