Footer image fixes

--- a/projects.html
+++ b/projects.html
@@ -49,13 +49,13 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="Projects.html">Projects </a>
+                        <a class="nav-link" href="projects.html">Projects </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
                   <li class="nav-item">
-                        <a class="nav-link" href="CV.html">CV</a>
+                        <a class="nav-link" href="cv.html">CV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -68,6 +68,23 @@
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
 
+
+    <!-- Header -->
+    <header id="header" class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="text-container">
+                      <h1 class="h1-large">Stuart Heath</h1>
+                        <h1 class="h1-large">Aspiring Games Programmer&nbsp;&nbsp;</h1>
+<a class="btn-solid-lg page-scroll" href="projects.html">Projects</a>
+                        <a class="btn-outline-lg page-scroll" href="about.html"></i>About me</a>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </header> <!-- end of header -->
+    <!-- end of header -->
 
 
 
@@ -418,13 +435,13 @@
                 <div class="col-lg-12">
                     <div class="social-container">
                         <span class="fa-stack">
-							<a href="https://stuartheath.itch.io/"><img src="images/icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
+							<a href="https://stuartheath.itch.io/"><img src="images/Icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/Icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://twitter.com/Pkplonker"><img src="images/icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://twitter.com/Pkplonker"><img src="images/Icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         
                     </div> <!-- end of social-container -->
