--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -49,13 +49,13 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="Projects.html">Projects </a>
+                        <a class="nav-link" href="projects.html">Projects </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
                   <li class="nav-item">
-                        <a class="nav-link" href="CV.html">CV</a>
+                        <a class="nav-link" href="cv.html">CV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -67,7 +67,6 @@
         </div> <!-- end of container -->
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
-
 
 
 
@@ -163,8 +162,7 @@
     </div> <!-- end of basic-4 -->
     <!-- end of works -->
 
-				
-
+		
     <!-- Footer -->
     <div class="footer bg-gray">
         <div class="container">
@@ -172,13 +170,13 @@
                 <div class="col-lg-12">
                     <div class="social-container">
                         <span class="fa-stack">
-							<a href="https://stuartheath.itch.io/"><img src="images/icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
+							<a href="https://stuartheath.itch.io/"><img src="images/Icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/Icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://twitter.com/Pkplonker"><img src="images/icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://twitter.com/Pkplonker"><img src="images/Icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         
                     </div> <!-- end of social-container -->
