--- a/contact.html
+++ b/contact.html
@@ -49,13 +49,13 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="Projects.html">Projects </a>
+                        <a class="nav-link" href="projects.html">Projects </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Me</a>
                     </li>
                   <li class="nav-item">
-                        <a class="nav-link" href="CV.html">CV</a>
+                        <a class="nav-link" href="cv.html">CV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
@@ -67,7 +67,6 @@
         </div> <!-- end of container -->
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
-
 
 
 
