--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                 <div class="col-lg-12">
                     <div class="social-container">
                         <span class="fa-stack">
-							<a href="https://stuartheath.itch.io/"><img src="images/Icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
+							<a href="https://stuartheath.itch.io/"><img src="images/itch.png" alt="Itch.io" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/Icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/linkedin.png" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://twitter.com/Pkplonker"><img src="images/Icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://twitter.com/Pkplonker"><img src="images/twitter.png" alt="Twitter" style="width:42px;height:42px;"></a>
                         </span>
                         
                     </div> <!-- end of social-container -->
