Footer fixes all pages

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a class="no-line" href="#your-link">Stuart Heath</a></p>
+                    <p class="p-small">Copyright © <a class="no-line" href="stuartheath.co.uk">Stuart Heath</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
