--- a/FormulaStudentGPSParser.html
+++ b/FormulaStudentGPSParser.html
@@ -180,6 +180,7 @@
 
 				
 
+
     <!-- Footer -->
     <div class="footer bg-gray">
         <div class="container">
@@ -187,13 +188,13 @@
                 <div class="col-lg-12">
                     <div class="social-container">
                         <span class="fa-stack">
-							<a href="https://stuartheath.itch.io/"><img src="images/Icons/itch.svg" alt="Itch.io" style="width:42px;height:42px;"></a>
+							<a href="https://stuartheath.itch.io/"><img src="images/itch.png" alt="Itch.io" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/Icons/linkedin.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://www.linkedin.com/in/stuartheath1/"><img src="images/linkedin.png" alt="Linkedin" style="width:42px;height:42px;"></a>
                         </span>
                         <span class="fa-stack">
-                          <a href="https://twitter.com/Pkplonker"><img src="images/Icons/twitter.svg" alt="Linkedin" style="width:42px;height:42px;"></a>
+                          <a href="https://twitter.com/Pkplonker"><img src="images/twitter.png" alt="Twitter" style="width:42px;height:42px;"></a>
                         </span>
                         
                     </div> <!-- end of social-container -->
@@ -210,7 +211,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a class="no-line" href="#your-link">Stuart Heath</a></p>
+                    <p class="p-small">Copyright © <a class="no-line" href="stuartheath.co.uk">Stuart Heath</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
