--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-fluid mt-5 mb-3" src="images/project-details-large.jpg" alt="alternative">
+             <center>  <img class="img-fluid mt-5 mb-3" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative"></center>     
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
