--- a/projects.html
+++ b/projects.html
@@ -130,17 +130,17 @@
                                 <img class="img-fluid" src="images/Projects/Flipoff/Flipoff2.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Global Game Jam 2021, <strong>Project:</strong> &nbsp;tbc</p>
+                        <p><strong>For:</strong> Global Game Jam 2021</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
                             <a href="">
-                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                                <img class="img-fluid" src="images/Projects/TwitchGame/twitchsnip3.jpg" alt="Twitch Game">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> tbc, <strong>Project:</strong> &nbsp;tbc</p>
+                        <p><strong>For:</strong> BigBhalu Twitch Streamer, <strong>Project:</strong> &nbsp;Create a Twitch stream overlay game for viewer interaction</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
