--- a/projects.html
+++ b/projects.html
@@ -115,12 +115,12 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-container">
-                        <div class="image-container">
+                      <div class="image-container">
                             <a href="HibernatingHedgehogs.html">
                                 <img class="img-fluid" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Grads in Games - Rising Star 2021 , <strong>Project:</strong> &nbsp;Converted a 2d Minesweeper base project into a 3D variant</p>
+                        <p><strong>For:</strong> Grads in Games - Rising Star 2021 <strong>Project:</strong> &nbsp;Converted a 2d Minesweeper base project into a 3D variant</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
@@ -136,8 +136,8 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="">
-                                <img class="img-fluid" src="images/Projects/TwitchGame/twitchsnip3.jpg" alt="Twitch Game">
+                            <a href="TwitchGame.html">
+                                <img class="img-fluid" src="images/Projects/TwitchGame/twitchsnip2.JPG" alt="Twitch Game">
                             </a>
                         </div> <!-- end of image-container -->
                         <p><strong>For:</strong> BigBhalu Twitch Streamer, <strong>Project:</strong> &nbsp;Create a Twitch stream overlay game for viewer interaction</p>
