--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,7 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                       <div class="image-container">
-                            <a href="HibernatingHedgehogs.html">
+                            <a href="hibernatinghedgehogs.html">
                                 <img class="img-fluid" src="images/Projects/HibernatingHedgehogs/HibernatingHedgehogs1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
@@ -148,11 +148,11 @@
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="">
-                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                            <a href="PlanetDefence.html">
+                                <img class="img-fluid" src="images/Projects/PlanetDefence/pd2.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> &nbsp;tbc, <strong>Project:</strong> &nbsp;tbc</p>
+                        <p><strong>For:</strong> &nbsp;Personal Project, <strong>Project:</strong> &nbsp;Planet Defence Android Game</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
