--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@
                                 <img class="img-fluid" src="images/Projects/TwitchGame/twitchsnip2.JPG" alt="Twitch Game">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> BigBhalu Twitch Streamer, <strong>Project:</strong> &nbsp;Create a Twitch stream overlay game for viewer interaction</p>
+                        <p><strong>For:</strong> BigBhalu Twitch Streamer <strong>Project:</strong> &nbsp;Create a Twitch stream overlay game for viewer interaction</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -152,17 +152,17 @@
                                 <img class="img-fluid" src="images/Projects/PlanetDefence/pd2.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> &nbsp;Personal Project, <strong>Project:</strong> &nbsp;Planet Defence Android Game</p>
+                        <p><strong>For:</strong> &nbsp;Personal Project <strong>Project:</strong> &nbsp;Planet Defence Android Game</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="">
-                                <img class="img-fluid" src="images/TBCtrans.png" alt="alternative">
+                            <a href="ProctreeAirship.html">
+                                <img class="img-fluid" src="images/Projects/ProcTree/Tree4.PNG" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> tbc, <strong>Project:</strong> &nbsp;tbc</p>
+                        <p><strong>For:</strong> &nbsp;Airship Interactive Jam, <strong>Project:</strong> &nbsp;"Growth" theme - Procedural tree generation</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
