--- a/ProctreeAirship.html
+++ b/ProctreeAirship.html
@@ -103,7 +103,7 @@
 				  </lu> 
 					
 					<iframe width="800" height="500"
-src="https://youtu.be/y04daorq4-E?autoplay=1&mute=1">
+src="https://youtu.be/embed/y04daorq4-E?autoplay=1&mute=1">
 </iframe>
 				  <p></p>
 				 <a href="https://github.com/pkplonker/Procedural-Tree"><img src="images/icons/GitHub_Logo.png" alt="Github" style="width:10%; height:10%"></a>
