--- a/ProctreeAirship.html
+++ b/ProctreeAirship.html
@@ -102,9 +102,7 @@
 	
 				  </lu> 
 					
-					<iframe width="800" height="500"
-src="https://youtu.be/embed/y04daorq4-E?autoplay=1&mute=1">
-</iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/y04daorq4-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				  <p></p>
 				 <a href="https://github.com/pkplonker/Procedural-Tree"><img src="images/icons/GitHub_Logo.png" alt="Github" style="width:10%; height:10%"></a>
                   <p></p>
