--- a/TwitchGame.html
+++ b/TwitchGame.html
@@ -118,9 +118,7 @@
 					</lu>
 										    <p>In this project, no 2D or 3D art was produced by me.</p>
 					
-					<iframe width="800" height="500"
-src="https://youtu.be/embed/bEY4WjRSxc8?autoplay=1&mute=1">
-</iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/bEY4WjRSxc8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 					</br>
 					
