--- a/TwitchGame.html
+++ b/TwitchGame.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-10 offset-xl-1">
-                    <h1>Flip Off - Global Game Jam 2021&nbsp; &nbsp;</h1>
+                    <h1>Twitch Overlay Game&nbsp;</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
