--- a/projecttemplate.html
+++ b/projecttemplate.html
@@ -68,7 +68,17 @@
     </nav> <!-- end of navbar -->
     <!-- end of navigation -->
 
-
+<!-- Header -->
+    <header class="ex-header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-10 offset-xl-1">
+                    <h1>Game Title&nbsp;</h1>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </header> <!-- end of ex-header -->
+    <!-- end of header -->
 
     <!-- Basic -->
     <div class="ex-basic-1 pt-5 pb-5">
