--- a/projects.html
+++ b/projects.html
@@ -326,7 +326,7 @@
                     <div class="text-container">
                         <div class="image-container">
                             <a href="FormulaStudentGPSParser.html">
-                                <img class="img-fluid" src="images/Icons/GitHub_Logo.png" alt="alternative" >
+                                <img class="img-fluid" src="images/Icons/formulaStudent.png" style="width:100%; height:50%" alt="alternative" >
                             </a>
                         </div> <!-- end of image-container -->
                         <p><strong>For:</strong> Formula Student, <strong>Project:</strong> &nbsp;Automotive GPS module log parser</p>
